fix warning spacing and nav padding

--- a/src/sass/components/EditsNav.scss
+++ b/src/sass/components/EditsNav.scss
@@ -1,6 +1,6 @@
 .EditsNav {
   background: $color-white;
-  padding: 1em 0;
+  padding: 1em 0 0 0;
   position: relative;
   text-align: center;
   top: 0;
@@ -8,7 +8,7 @@
   z-index: 1000;
 
   hr {
-    margin-top: 0;
+    margin: 0;
   }
 
   &.EditsNav-fixed {
