--- a/src/sass/components/RefileWarning.scss
+++ b/src/sass/components/RefileWarning.scss
@@ -9,7 +9,8 @@
 
 .RefileWarning {
   animation: 0.3s ease-out 0s 1 animateWarningHeader;
-  margin: 1px 0 0 0;
+  margin: -1px 0 0 0;
+  box-shadow: 0px 1px 3px -2px;
   text-align: left;
   
   .usa-alert-body {
